--- a/jobsummary/templates/job_summary/createjobsummary.html
+++ b/jobsummary/templates/job_summary/createjobsummary.html
@@ -6,7 +6,7 @@
     {% endblock %}
 
  {% block content_dashboard %}
-    
+    <h6 class="collapse-header">TAO KET LUAN GIAO BAN</h6>
    
 
  {% endblock %}
