--- a/jobsummary/templates/job_summary/KLGBinvestment.html
+++ b/jobsummary/templates/job_summary/KLGBinvestment.html
@@ -36,7 +36,7 @@
                                         </tr>
                                     </tfoot>
                                     <tbody>
-                                        {% for jobs in Jobsummary %}
+                                        {% for jobs in jobsumary %}
                                         <tr>
                                             <td>{{ jobs.id }}</td>
                                             <td>{{ jobs.description }}</td>
