--- a/jobsummary/templates/dashboard/_sidebar.html
+++ b/jobsummary/templates/dashboard/_sidebar.html
@@ -126,6 +126,23 @@
                     </div>
                 </div> 
             </li>
+
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages1"
+                    aria-expanded="true" aria-controls="collapsePages"1>
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>user management </span>
+                </a>
+                <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                       
+                        <a class="collapse-item" href="{% url 'Create_user'%}">Create user</a>
+                        <a class="collapse-item" href="{% url 'List_user'%}">List users</a>
+                       
+                    </div>
+                </div> 
+            </li>
             {% comment %} <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
