--- a/jobsummary/templates/dashboard/_sidebar.html
+++ b/jobsummary/templates/dashboard/_sidebar.html
@@ -13,7 +13,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="{% url 'Danh_sach_KLGB'%}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Trang chu</span></a>
             </li>
@@ -126,7 +126,6 @@
                     </div>
                 </div> 
             </li>
-<<<<<<< HEAD
 
 
             <li class="nav-item">
@@ -178,11 +177,10 @@
                     </div>
                 </div>
             </li> {% endcomment %}
-=======
             {% comment %} 
                
             {% endcomment %}
->>>>>>> create_dat/list
+
 
             <!-- Nav Item - Charts -->
             <!-- <li class="nav-item">
