--- a/jobsummary/templates/job_summary/listjobsummary.html
+++ b/jobsummary/templates/job_summary/listjobsummary.html
@@ -15,26 +15,36 @@
             <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
-                          <tr>
-                            <th>STT</th>
-                            <th>CONG VIEC</th>
-                            <th>VAN BAN DUOC GIAO</th>
-                            <th>CA NHAN CHU TRI</th>
-                            <th>TIEN DO DUOC GIAO</th>
-                            <th>TIEN DO HOAN THANH THUC TE</th>
+                        <tr>
+                            
+                            <th style ="text-align:center;vertical-align: middle;" >STT</th>
+                            <th style ="text-align:center;vertical-align: middle;" >CONG VIEC</th>
+                            <th style ="text-align:center;vertical-align: middle;" >VAN BAN DUOC GIAO</th>
+                            <th style ="text-align:center;vertical-align: middle;" >PHONG CHU TRI</th>
+                            <th style ="text-align:center;vertical-align: middle;" >TIEN DO DUOC GIAO</th>
+                            <th style ="text-align:center;vertical-align: middle;" >TIEN DO THUC TE</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for summaryinvest in jobsummary %}
+                        {% for listjobsummary in showjobsummary %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>{{listjobsummary.description}}</td>
+                                <td>{{listjobsummary.document}}</td>
+                                <td>{{listjobsummary.room.name}}</td>
+                                <td>{{listjobsummary.deadline_plan}}</td>
+                                <td>{{listjobsummary.deadline}}</td>
+                                <td>
+                                    <a href="{% url 'editjobsummary' pk=editjobsummary.id %}">
+                                        <i class="far fa-edit" title="Edit"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="far fa-trash-alt" title="Delete"></i>
+                                    </a>
+                                </td>
                             </tr>
-    
+                                
                         {% endfor%}    
                         </tbody>
                     <tfoot>
