--- a/jobsummary/templates/job_summary/createjobsummary.html
+++ b/jobsummary/templates/job_summary/createjobsummary.html
@@ -42,11 +42,11 @@
       </div>
       <div class="form-group">
         <label for="start">Tien Do Duoc Giao:</label>
-        <input type="date" id="start" name="deadline_plan" min="2018-01-01" max="2050-12-31">
+        <input type="date" id="start" name="deadline_plan" >
       </div>
       <div class="form-group">
         <label for="end">Tien Do Thuc Te:</label>
-        <input type="date" id="end" name="deadline" min="2018-01-01" max="2050-12-31">
+        <input type="date" id="end" name="deadline" >
       </div>
       <button type="submit" class="btn btn-primary">Save</button>
   </form>
