--- a/jobsummary/templates/users/create_user.html
+++ b/jobsummary/templates/users/create_user.html
@@ -24,7 +24,7 @@
 
     <div class="form-group">
         <label for="inputEmail">Email address</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com" name="email">
+        <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com" name="email" autocomplete="off">
     </div>
 
     <div class="form-group">
