--- a/jobsummary/templates/users/list_user.html
+++ b/jobsummary/templates/users/list_user.html
@@ -49,11 +49,12 @@
                                             <td>
                                             <a href="{% url 'Edit_user' pk=listuser.id %}">
                                                 <i class="far fa-edit"title="Edit"></i>
-                                            </a>    
-                                            <a href="{% url 'Delete_user' pk=listuser.id %}">
-                                                <i class="far fa-trash-alt"title="Delete"></i>
-                                            </a>
-                                    
+                                            </a> 
+                                            {% if not listuser.jobsummary_set.count %}   
+                                                <a href="{% url 'Delete_user' pk=listuser.id %}" method="DELETE">
+                                                    <i class="far fa-trash-alt"title="Delete"></i>
+                                                </a>
+                                            {% endif %}
                                             </td> 
                                         </tr>
                                     {% endfor%}    
