--- a/jobsummary/templates/base.html
+++ b/jobsummary/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     {% block title %}
-    <title>SB Admin 2 - Login</title>
+    <title>Ket Luan Giao Ban - Dang Nhap</title>
     {% endblock %}
     
 
