--- a/jobsummary/templates/dashboard/index.html
+++ b/jobsummary/templates/dashboard/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-   <title>SB Admin 2 - Dashboard</title>
+   <title>Ket Luan Giao Ban</title>
 {% endblock %}
     
 
