--- a/jobsummary/templates/job_summary/assignuser.html
+++ b/jobsummary/templates/job_summary/assignuser.html
@@ -11,7 +11,7 @@
       {% csrf_token %}
       <div class="form-group">
         <label for="room">Phong Chu Tri:</label>
-        <select id="room" class="form-control" name = "room"  disabled="disabled">
+        <select id="room" class="form-control" name = "room" {% if request.user.role == 2 %} disabled="disabled"{%endif%}>
             <option value="{{jobsummary.room.id}}" selected>
               {{jobsummary.room.name}}
             </option>
@@ -45,14 +45,17 @@
         <label for="end">Tien Do Thuc Te:</label>
         <input type="date" id="end" name="deadline" value="{{jobsummary.deadline|date:'Y-m-d' }}" disabled="disabled">
       </div>
-      <select id="user" class="form-control" name = "assign_user">
+
+
+      <select id="user" class="form-control" name = "assign_user" {% if request.user.role == 1 %}disabled="disabled"{% endif %}>
         <option selected>----------</option>
         {% for user in room_users %}
-          <option value="{{user.id}}" {% if user.id == jobsummary.assign %} selected{%endif%}>
+          <option value="{{user.id}}" {% if user.id == jobsummary.assign %} selected{% endif %}>
             {{user.fullname}}
           </option>
         {% endfor %}
       </select>
+
       <button type="submit" class="btn btn-primary">Giao viec</button>
     </form>
 
