--- a/jobsummary/templates/job_summary/listjobsummary.html
+++ b/jobsummary/templates/job_summary/listjobsummary.html
@@ -35,17 +35,17 @@
                                 <td>{{listjobsummary.deadline}}</td>
                                 <td>{{listjobsummary.get_status_display}}</td>
                                 <td>
-                                    {% if perms.jobsummary.can_change_jobsummary %}
+                                    {% if perms.jobsummary.change_jobsummary %}
                                     <a href="{% url 'editjobsummary' pk=listjobsummary.id %}">
                                         <i class="far fa-edit" title="Edit"></i>
                                     </a>
                                     {% endif %}
 
-                                    {% if perms.jobsummary.can_delete_jobsummary %}
-                                    <a href="{% url 'Danh_sach_KLGB' pk=listjobsummary.id %}" method="DELETE"
-                                        onclick="return confirm('Confirm delete?')">
-                                        <i class="far fa-trash-alt" title="Delete"></i>
-                                    </a>
+                                    {% if perms.jobsummary.delete_jobsummary %}
+                                        <a href="{% url 'deletejobsummary' pk=listjobsummary.id %}" method="DELETE"
+                                            onclick="return confirm('Confirm delete?')">
+                                            <i class="far fa-trash-alt" title="Delete"></i>
+                                        </a>
                                     {% endif %}
                                     
                                     <a href="{% url 'detailjobsummary' pk=listjobsummary.id %}">
@@ -53,9 +53,9 @@
                                     </a>
 
                                     {% if perms.jobsummary.can_assign_job %}
-                                    <a href="{% url 'Assign_user' pk=listjobsummary.id %}">
-                                    <i class="fas fa-arrow-right" style="color:blue"; title="ASSIGN"></i>
-                                    </a>
+                                        <a href="{% url 'Assign_user' pk=listjobsummary.id %}">
+                                        <i class="fas fa-arrow-right" style="color:blue"; title="ASSIGN"></i>
+                                        </a>
                                     {% endif %}
                                     
                                     {% if perms.jobsummary.can_receive_job %}
