--- a/jobsummary/templates/dashboard/_sidebar.html
+++ b/jobsummary/templates/dashboard/_sidebar.html
@@ -133,55 +133,57 @@
             </div> {% endcomment %}
 
             <!-- Nav Item - Pages Collapse Menu -->
-             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Tao ket luan giao ban </span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                       
-                        <a class="collapse-item" href="{% url 'Tao_KLGB'%}">Tao moi</a>
-                        <a class="collapse-item" href="{% url 'Danh_sach_KLGB'%}">Danh sach</a>
+            {% if request.user.role == 0 or request.user.role == 1 %}
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                        aria-expanded="true" aria-controls="collapsePages">
+                        <i class="fas fa-fw fa-folder"></i>
+                        <span>Tao ket luan giao ban </span>
+                    </a>
+                    <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
                         
-                    </div>
-                </div> 
-            </li>
+                            <a class="collapse-item" href="{% url 'Tao_KLGB'%}">Tao moi</a>
+                            <a class="collapse-item" href="{% url 'Danh_sach_KLGB'%}">Danh sach</a>
+                            
+                        </div>
+                    </div> 
+                </li>
+            {% endif %}
 
+            {% if request.user.role == 2 %}
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages1"
+                        aria-expanded="true" aria-controls="collapsePages1">
+                        <i class="fas fa-fw fa-folder"></i>
+                        <span>Quan ly nguoi dung </span>
+                    </a>
+                    <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <a class="collapse-item" href="{% url 'List_user'%}">List users</a>
+                        
+                        </div>
+                    </div> 
+                </li>
+            {% endif %}
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages1"
-                    aria-expanded="true" aria-controls="collapsePages1">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Quan ly nguoi dung </span>
-                </a>
-                <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                       
-                        <a class="collapse-item" href="{% url 'Create_user'%}">Create user</a>
-                        <a class="collapse-item" href="{% url 'List_user'%}">List users</a>
-                       
-                    </div>
-                </div> 
-            </li>
-
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2"
-                    aria-expanded="true" aria-controls="collapsePages2">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Quan ly phong ban </span>
-                </a>
-                <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                       
-                        <a class="collapse-item" href="{% url 'Create_room'%}">Create room</a>
-                        <a class="collapse-item" href="{% url 'List_room'%}">List rooms</a> 
-                       
-                    </div>
-                </div> 
-            </li>
+            {% if request.user.role == 0 or request.user.role == 1 %}
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2"
+                        aria-expanded="true" aria-controls="collapsePages2">
+                        <i class="fas fa-fw fa-folder"></i>
+                        <span>Quan ly phong ban </span>
+                    </a>
+                    <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                        
+                            <a class="collapse-item" href="{% url 'Create_room'%}">Create room</a>
+                            <a class="collapse-item" href="{% url 'List_room'%}">List rooms</a> 
+                        
+                        </div>
+                    </div> 
+                </li>
+            {% endif %}
             
             {% comment %} <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
